--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <html>
 
 <head>
-
-<script type="text/javascript" src="jquery-3.1.0.min.js"></script>
+<script   src="https://code.jquery.com/jquery-2.2.4.min.js"
+integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+ crossorigin="anonymous"></script>
 <script type="text/javascript" src="main.js"></script>
 <script type="text/javascript" src="bootstrap.js"></script>
 <link rel="stylesheet" type="text/css" href="main.css"></link>
